@@ -65,13 +65,6 @@ AC_ARG_ENABLE([timings], AC_HELP_STRING([--enable-timings],[Enable timing output
 AS_IF( [ test "x$enable_timings" = "xyes"], [AC_DEFINE([TIMINGS],[1], [Enable timings output])])
 
 dnl ---------------------------------------------------------------------
-dnl I3 check
-dnl ---------------------------------------------------------------------
-AC_ARG_ENABLE(i3support, [AS_HELP_STRING([--disable-i3support], [Disable check for i3 support])])
-AS_IF([test "x$enable_i3support" != xno && test "x$enable_windowmode" != "xno"],[AC_CHECK_HEADERS([i3/ipc.h], [i3_header=yes; break;])])
-
-
-dnl ---------------------------------------------------------------------
 dnl Check for C functions.
 dnl ---------------------------------------------------------------------
 AC_CHECK_FUNC([getline],,  AC_MSG_ERROR("Could not find getline in c library"))
@@ -113,11 +106,6 @@ dnl -----------------------------------------------
 
 echo ""
 echo "-------------------------------------"
-if test x$i3_header = xyes; then
-echo "I3 support:                  Enabled"
-else
-echo "I3 support:                  Disabled"
-fi
 if test x$enable_timings = xyes; then
 echo "Timing output:               Enabled"
 else
